# VeridiaApp

./: .gitignore  ACCESSIBILITY.md  API_ENHANCEMENTS.md  API_EXAMPLES.md  ARCHITECTURE.md  ARCHITECTURE_FIX.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG_CORS_FIX.md  CLEANUP_SUMMARY.md  COMPLETE.md  COMPONENTS.md  CORS_FIX.md  CORS_FIX_SUMMARY.md  DATABASE_SETUP.md  DEPLOYMENT.md  DESIGN.md  DESIGN_SUMMARY.md  DISCOVERY_PAGE_IMPROVEMENTS.md  DOCUMENTATION_INDEX.md  ENV_SETUP.md  FIX_SUMMARY.md  FRONTEND_REFACTORING_COMPLETE.md  GDPR_COMPLIANCE.md  GETTING_STARTED.md  IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  NAVIGATION_FIXES.md  NAVIGATION_FIXES_SUMMARY.md  NAVIGATION_FLOW.md  PROFILE_DASHBOARD_GUIDE.md  PROJECT_SUMMARY.md  PR_SUMMARY.md  QUICKSTART.md  QUICK_FIX.md  QUICK_START.md  RBAC.md  README.md  (+18 more)
ai_verification_engine/: Dockerfile  requirements.txt
audit_scoring_service/: Dockerfile  requirements.txt
backend/: .env  index.js  package-lock.json  package.json
comment_service/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt
content_service/: .env.example  .gitignore  Dockerfile  (+4 more)
src/backend/user_service/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.in  requirements.txt
src/backend/user_service/app/: main.py
src/backend/user_service/core/: config.py  dependencies.py  security.py
src/backend/user_service/crud/: user.py
src/backend/user_service/models/: user_pydantic.py  user_sql.py
src/backend/user_service/tests/: test_main.py  test_users.py
(+276 files in other folders)
