[project]
name = "user-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "new-package>=0.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-keycloak>=5.8.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
